# StickMiner

./: .clangd.example  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  partitions.csv  partitions_4mb.csv  partitions_esp32_4mb.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: build.yml  ci.yml  pages.yml  release.yml
components/asic/: CMakeLists.txt
components/board/: CMakeLists.txt
components/display/: CMakeLists.txt
components/http_server/: CMakeLists.txt  mining.js
components/mining/: CMakeLists.txt
components/stratum/: CMakeLists.txt
components/taipan_web/: CMakeLists.txt
components/wifi_prov/: CMakeLists.txt
scripts/: embed_html.py  embed_partitions.py  fetch_breadboard.py  svg_to_logo.py
sdkconfig/: bitaxe-403  bitaxe-601  bitaxe-601-debug  bitaxe-650  bitaxe-650-debug  bitaxe-supra  bitaxe-supra-debug  bitdsk-n8t  bitdsk-n8t-debug  debug-common  esp32-wroom32  esp32-wroom32-debug  tdongle-s3-debug
src/: CMakeLists.txt  boot_fallback_decision.h  config.h.example  main.c  partition_fixup.c  tm_pre_http.c
src/ui/: ui.c  ui.h
test/test_host/: test_asic_chip_routing.c  test_asic_drop_detect.c  test_asic_drop_log.c  test_asic_job_table.c  test_asic_nonce_dedup.c  test_asic_pause_coalesce.c  test_asic_proto.c  test_asic_share_validator.c  test_asic_ticket_mask.c  test_autofan_aggregation.c  test_bm1368.c  test_bm1370.c  test_boot_fallback.c  test_config_hostname.c  test_config_manifest.c  test_crc.c  (+19 more)
webui/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
(+169 files in other folders)
